# mini-TSDB

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  test.tsdb
benchmark/: CMakeLists.txt  Makefile  cmake_install.cmake  write_benchmark.cpp
include/tsdb/: delta_delta.h  flatbuf_generated.h  mmap_file.h  tsdb.h  tsdb_generated.h  tsdb_reader.h  tsdb_types.h  tsdb_writer.h  utils.h
schema/: tsdb.fbs
scripts/: generate_flatbuffers.sh
src/: CMakeLists.txt  Makefile  cmake_install.cmake  delta_delta.cpp  main  main.cpp  mmap_file.cpp  tsdb.cpp  tsdb_reader.cpp  tsdb_writer.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  delta_delta_test  delta_delta_test.cpp  mmap_file_test  mmap_file_test.cpp  tsdb_reader_test  tsdb_reader_test.cpp  tsdb_writer_test  tsdb_writer_test.cpp  writer_test  writer_test.cpp
